@@ -5,6 +5,7 @@ Latest changes:
 === devel ===
 
 - Build system:
+  * ccache: Use external cache dir (~/.freetz-ccache)
   * fakeroot: bump version to 1.16
   * use host tar to unpack packages again as busybox' tar doesn't support pax (aka POSIX 1003.1-2001) tar format
 
